Fix(layout): update sizing and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -555,8 +555,8 @@ video {
 }
 
 .avatar {
-  height: 1.75rem;
-  width: 1.75rem;
+  height: 2rem;
+  width: 2rem;
   border-radius: 9999px;
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
@@ -572,22 +572,37 @@ video {
 
 .card {
   display: flex;
-  height: 100%;
   width: 100%;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: flex-start;
   gap: 1rem;
   border-radius: 0.5rem;
   padding-left: 2rem;
   padding-right: 2rem;
-  padding-top: 1.75rem;
-  padding-bottom: 1.75rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 @media (min-width: 768px) {
   .card {
     gap: 0.75rem;
+    --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
+    filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
   }
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
 
 .absolute {
@@ -618,16 +633,8 @@ video {
   display: grid;
 }
 
-.h-full {
-  height: 100%;
-}
-
-.w-full {
-  width: 100%;
-}
-
-.max-w-6xl {
-  max-width: 72rem;
+.max-w-\[50\%\] {
+  max-width: 50%;
 }
 
 .grid-cols-1 {
@@ -654,8 +661,8 @@ video {
   gap: 1rem;
 }
 
-.gap-y-7 {
-  row-gap: 1.75rem;
+.gap-y-6 {
+  row-gap: 1.5rem;
 }
 
 .bg-moderate-violet {
@@ -678,27 +685,8 @@ video {
   background-color: hsl(0 0% 100% / var(--tw-bg-opacity));
 }
 
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-
 .text-2xs {
   font-size: 11px;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.font-semibold {
-  font-weight: 600;
 }
 
 .leading-tight {
@@ -749,9 +737,10 @@ video {
 
 body {
   display: flex;
-  height: 100%;
+  min-height: 100vh;
   align-items: center;
   justify-content: center;
+  overflow-x: hidden;
   --tw-bg-opacity: 1;
   background-color: hsl(210 46% 95% / var(--tw-bg-opacity));
   font-family: Barlow Semi Condensed, sans-serif;
@@ -759,6 +748,76 @@ body {
   font-weight: 500;
   --tw-text-opacity: 1;
   color: hsl(219 29% 14% / var(--tw-text-opacity));
+}
+
+main {
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  main {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  main {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  main {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  main {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  main {
+    max-width: 1536px;
+  }
+}
+
+main {
+  width: 100%;
+  max-width: 72rem;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+@media (min-width: 768px) {
+  main {
+    padding: 2.5rem;
+  }
+}
+
+h2 {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  font-weight: 600;
+}
+
+@media (min-width: 768px) {
+  h2 {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+}
+
+.sr-only {
+  position: absolute;
+  margin: -0.25rem;
+  height: 0px;
+  width: 0px;
+  padding: 0px;
 }
 
 /* Custom components */
@@ -788,8 +847,8 @@ body {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
-  .md\:grid-rows-2 {
-    grid-template-rows: repeat(2, minmax(0, 1fr));
+  .md\:grid-rows-\[auto\] {
+    grid-template-rows: auto;
   }
 
   .md\:gap-x-6 {
