--- a/input.css
+++ b/input.css
@@ -3,17 +3,30 @@
 @tailwind utilities;
 
 /* Custom global styles */
+
 body {
-  @apply text-very-dark-blackish-blue text-body font-sans font-medium bg-light-grayish-blue flex justify-center items-center h-full;
+  @apply text-very-dark-blackish-blue text-body font-sans font-medium bg-light-grayish-blue flex justify-center items-center min-h-screen overflow-x-hidden;
+}
+
+main {
+  @apply max-w-6xl container px-5 py-5 md:p-10 w-full;
+}
+
+h2 {
+  @apply text-lg md:text-xl font-semibold;
+}
+
+.sr-only {
+  @apply absolute w-0 h-0 p-0 -m-1;
 }
 
 /* Custom components */
 @layer components {
   .avatar {
-    @apply rounded-full w-7 h-7 ring-2 md:w-8 md:h-8;
+    @apply rounded-full w-8 h-8 ring-2 md:w-8 md:h-8;
   }
 
   .card {
-    @apply flex flex-col justify-around px-8 py-7 gap-4 rounded-lg h-full w-full md:gap-3;
+    @apply flex flex-col justify-start px-8 py-8 gap-4 rounded-lg w-full md:gap-3 drop-shadow-lg md:drop-shadow-xl;
   }
 }
